Fix compilation issue cause by downgrade to java 8